style artist element, and make sure the elements wrap properly

--- a/website/src/app/components/search-page/search-page.component.css
+++ b/website/src/app/components/search-page/search-page.component.css
@@ -8,6 +8,7 @@
   text-align: center;
   font-family: "Intro Rust";
   color: #5a5a5a;
+  margin: 10px;
 }
 .input-search-wrapper {
   display: inline-block;
